* Mon May 2 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.17
- Only send RADIUS stop record in sessionshutdown when there's an ip address.
- Reset .die on master takeover (so that dying sessions don't have to
  hang around until the new master has the same uptime as the old one).
- Update .last_packet in cluster_handle_bytes only when there have
  been bytes received from the modem (dead sessions were having the
  idle timeout reset by stray packets).

* Mon Feb 14 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.16
- Ensure that sessionkill is not called on an unopened session (borks
  the freelist).
- Bump MAXSESSION to 60K.
- Fix off-by-one errors in session/tunnel initialisation and
  sessiont <-> sessionidt functions.
- Use session[s].opened consistently when checking for in-use sessions
  (rather than session[s].tunnel).
- Use <= cluster_highest_sessionid rather than < MAXSESSION in a
  couple of loops.
- Don't kill a whole tunnel if we're out of sessions.
- Change session[s].ip to 0 if set from RADIUS to 255.255.255.254;
  avoids the possibility that it will be interpreted as a valid IP
  address.
- Avoid a possible buffer overflow in processpap.
- Kill session if authentication was rejected.

* Thu Jan 13 2005 Brendan O'Dea <bod@optusnet.com.au> 2.0.15
- More DoS prevention:  add packet_limit option to apply a hard limit
  to downstream packets per session.
- Fix "clear counters".
- Log "Accepted connection to CLI" at 4 when connection is from localhost
  to reduce noise in logs.
- Show time since last counter reset in "show counters".

* Mon Dec 20 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.14
- Throttle outgoing LASTSEEN packets to at most one per second for a
  given seq#.

* Fri Dec 17 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.13
- Better cluster master collision resolution: keep a counter of state
  changes, propagated in the heartbeats; the master with the highest #
  of changes (that has kept in contact with the LAC through the
  outage) prevails.